# seed-plus-plus

./: .gitignore  README.md  SeedPlusPlus.sln
SeedPlusPlus.Api/: DependencyInjection.cs  Program.cs  SeedPlusPlus.Api.csproj  Seeds.db  Seeds.db-shm  appsettings.json
SeedPlusPlus.Api/Categories/: Categories.cs  CategoriesEndpoints.cs  Mapper.cs
SeedPlusPlus.Api/Dtos/: OrderResponse.cs
SeedPlusPlus.Api/Endpoints/: Categories.cs  Orders.cs  Products.cs
SeedPlusPlus.Api/Extensions/: OrderMapper.cs
SeedPlusPlus.Api/Orders/: Endpoints.cs  Mapper.cs  OrderResponse.cs
SeedPlusPlus.Api/Products/: AddImageRequest.cs  CreateProductRequest.cs  Endpoints.cs  Mapper.cs  ProductsEndpoints.cs
SeedPlusPlus.Api/Properties/: launchSettings.json
SeedPlusPlus.Api/Tags/: Mapper.cs  TagsEndpoints.cs
SeedPlusPlus.CPP/: SeedDataGeneratorWrapper.cpp  SeedDataGeneratorWrapper.h  SeedPlusPlus.CPP.vcxproj
SeedPlusPlus.Core/: IUseCase.cs  Optional.cs  Result.cs  SeedPlusPlus.Core.csproj  UseCaseResult.cs
SeedPlusPlus.Core/Exceptions/: NotFoundException.cs
SeedPlusPlus.CppClr/: AssemblyInfo.cpp  SeedPlusPlus.CppClr.h  SeedPlusPlus.CppClr.vcxproj  SeedPlusPlus.CppClr.vcxproj.filters  SeedPlusPlusCppClr.cpp  SeedPlusPlusCppClr.h
SeedPlusPlus.Data/: DependencyInjection.cs  LibC.cs  OrderRepository.cs  ProductCategoryRepository.cs  ProductRepository.cs  SeedPlusPlus.Data.csproj  SeedPlusPlusContext.cs  SeedPlusPlusContextFactory.cs  SeedPlusPlusTestContext.cs
c-test-thing/: CMakeLists.txt  library.c  library.h
seed_lib/: CMakeLists.txt  library.c  library.h
(+67 files in other folders)
